# modyv2

./: .replit  analysis.py  auth.py  dashboard.py  database.py  documentation.md  main.py  migrate_db.py  moody.db  profile.py  pyproject.toml  start_app.bat  suggestions.py  utils.py  webapp.py
assets/: emojis.py
web_adapter/: web_app.py
web_adapter/static/css/: style.css
web_adapter/static/js/: app.js
web_adapter/templates/: analysis.html  dashboard.html  index.html  profile.html  simple_index.html  suggestions.html
