[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.8.2",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "flask-wtf>=1.2.2",
    "reportlab>=4.4.2",
]
